--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/env": "^16.1.1",
+    "@vercel/analytics": "^1.6.1",
     "lucide-react": "^0.460.0",
     "next": "^14.2.35",
     "react": "^18",
